--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=crawler-service
 server.port=8081
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 #spring.datasource.url=jdbc:log4jdbc:mysql://localhost:3306/pron?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false
-spring.datasource.url=jdbc:mysql://localhost:3306/pron?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false
+spring.datasource.url=jdbc:mysql://192.168.0.103:3306/pron?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false
 #spring.datasource.driver-class-name=net.sf.log4jdbc.DriverSpy
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
