--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,11 +25,11 @@ spring.datasource.testOnReturn=false
 #spring.datasource.filters=stat,wall,log4j
 spring.datasource.logSlowSql=true
 #jpa
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 
-spring.redis.host=localhost
+spring.redis.host=192.168.0.103
 spring.redis.port=6379
 spring.redis.database=0
 
