--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,7 +25,7 @@ spring.datasource.testOnReturn=false
 #spring.datasource.filters=stat,wall,log4j
 spring.datasource.logSlowSql=true
 #jpa
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 
