--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,5 @@ spring.redis.host=192.168.0.103
 spring.redis.port=6379
 spring.redis.database=0
 
+eureka.client.service-url.defaultZone=http://localhost:9000/eureka/
+
