--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -28,4 +28,4 @@ spring.redis.database=0
 
 spring.cache.cache-names=systemConfig
 
-eureka.client.service-url.defaultZone=http://localhost:9000/eureka/
+eureka.client.service-url.defaultZone=http://192.168.0.101:9000/eureka/
