--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -29,3 +29,5 @@ spring.redis.database=0
 spring.cache.cache-names=systemConfig
 
 eureka.client.service-url.defaultZone=http://192.168.0.101:9000/eureka/
+eureka.instance.prefer-ip-address=true  
+eureka.instance.instance-id=${spring.cloud.client.ipAddress}:${server.port} 
