--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 #spring.datasource.url=jdbc:log4jdbc:mysql://localhost:3306/pron?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false
-spring.datasource.url=jdbc:mysql://192.168.0.103:3306/pron?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false
+spring.datasource.url=jdbc:mysql://192.168.0.103:3306/crawler_service?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false
 #spring.datasource.driver-class-name=net.sf.log4jdbc.DriverSpy
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
@@ -30,4 +30,6 @@ spring.cache.cache-names=systemConfig
 
 eureka.client.service-url.defaultZone=http://192.168.0.101:9000/eureka/
 eureka.instance.prefer-ip-address=true  
-eureka.instance.instance-id=${spring.cloud.client.ipAddress}:${server.port} 
+eureka.instance.instance-id=${spring.cloud.client.ipAddress}:${server.port}
+
+feign.hystrix.enabled=true
